Updated initSpaceshipParams and destroyComponent